cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DisplayImageGammaCorrect_MT DisplayImageGammaCorrect_MT.cpp )
add_executable( DisplayImageGammaCorrect_1T DisplayImageGammaCorrect_1T.cpp )
target_link_libraries( DisplayImageGammaCorrect_MT ${OpenCV_LIBS} )
target_link_libraries( DisplayImageGammaCorrect_1T ${OpenCV_LIBS} )
